--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "0.10.38",
+    "npm": "1.4.28"
+  },
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
